Add base reader for massive XML files