@@ -29,6 +29,9 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 test {
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "512m" // maximum heap size
+//    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
     useJUnitPlatform()
 }
 
